feat: авторизация пользователя

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -15,5 +15,11 @@
     "one": "article",
     "other": "articles"
   },
-  "labelLogin": "Login"
+  "btnLogin": "Login",
+  "btnLogout": "Log out",
+  "loginLabel": "Login",
+  "passwordLabel": "Password",
+  "profileTitle": "Profile",
+  "profileName": "Name",
+  "phone": "Phone"
 }
