feat: дизайн страницы логин

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -21,5 +21,6 @@
   "passwordLabel": "Password",
   "profileTitle": "Profile",
   "profileName": "Name",
-  "phone": "Phone"
+  "phone": "Phone",
+  "loginTitle": "Login"
 }
