feat: дизайн header

--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -17,9 +17,9 @@
     "many": "товаров",
     "other": "товара"
   },
-  "btnLogin": "Войти",
+  "btnLogin": "Вход",
   "loginLabel": "Логин",
-  "btnLogout": "Выйти",
+  "btnLogout": "Выход",
   "passwordLabel": "Пароль",
   "profileTitle": "Профиль",
   "profileName": "Имя",
