feat: дизайн страницы логин

--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -18,6 +18,7 @@
     "other": "товара"
   },
   "btnLogin": "Вход",
+  "formBtnSubmit": "Войти",
   "loginLabel": "Логин",
   "btnLogout": "Выход",
   "passwordLabel": "Пароль",
