--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -16,6 +16,7 @@
     "other": "articles"
   },
   "btnLogin": "Login",
+  "formBtnSubmit": "Login",
   "btnLogout": "Log out",
   "loginLabel": "Login",
   "passwordLabel": "Password",
