feat: вложенность сообщений

--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -24,9 +24,15 @@
   "session.signIn": "Вход",
   "session.signOut": "Выход",
   "comments": "Комментарии",
+  "comments.linkText": "Войдите",
+  "comments.text": "чтобы иметь возможность комментировать",
+  "reply.text": "чтобы иметь возможность ответить",
   "reply.titleNewComment": "Новый комментарий",
   "reply.titleNewReply": "Новый ответ",
   "reply.labelSend": "Отправить",
   "reply": "Ответить",
-  "reply.labelCancel": "Отменить"
+  "reply.labelCancel": "Отмена",
+  "Jun": "Июня",
+  "Jul": "Июля",
+  "at": "в"
 }
