--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -22,9 +22,15 @@
   "session.signIn": "Sign In",
   "session.signOut": "Sign Out",
   "comments": "Comments",
+  "comments.linkText": "Login",
+  "comments.text": "to be able to comment",
+  "reply.text": "to be able to reply",
   "reply.titleNewComment": "New Comment",
   "reply.titleNewReply": "New Reply",
   "reply.labelSend": "Send",
   "reply": "Reply",
-  "reply.labelCancel": "Cancel"
+  "reply.labelCancel": "Cancel",
+  "Jun": "June",
+  "Jul": "July",
+  "at": "at"
 }
